moved around classes in css, adjustment to navbar and footer sizes, unresolved fix for offcenter google logo (currently using a workaround to place it in the center)

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* google logo image in center */
+#logo{
+    display: block;
+    /* clunky fix for centering */
+    margin-left: 38.7%; 
+    padding-top: 100px;
+}
 ul{
     list-style-type: none;
     padding:0;
@@ -8,7 +15,8 @@ ul{
     padding-top:5px;
 }
 li{
-    display: inline-block;
+    display: inline-flex;
+    margin-left: 10px;
 }
 .navbar{
     padding-top: 4px;
@@ -25,7 +33,12 @@ li{
     width: 20px;
     height: 20px;
     padding-right: 10px;
+    padding-top: 8px;
+    padding-left: 10px;
     border:none;
+    background-color: rgb(109, 108, 108);
+}
+#images:hover{
     background-color: rgb(65, 65, 65);
 }
 /* sign-in for google user */
@@ -37,16 +50,9 @@ li{
     font-size: 12px;
     color:white;
     padding-right: 10px;
-    background-color: rgb(107, 139, 245);
+    background-color: rgb(81, 134, 248);
 }
-/* google logo image in center */
-#logo{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 13em;
-    padding-top: 100px;
-}
+
 p{
     text-align: center;
     padding-bottom: 10px;
@@ -58,7 +64,10 @@ p{
 }
 #search{
     margin-left: auto;
-    height: 20px;
+    padding: 10px 20px;
+}
+input:hover{
+    box-shadow: 5px 10 px rgb(83, 82, 82);
 }
 .footer{
     position:fixed;
